# forager

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  setup.cfg
forager/: __init__.py  client_initializer.py
forager/app_clients/: async_client.py  client.py
forager/app_services/: email_validation_service.py
forager/common/: common_utilities.py  storage.py  validators.py
forager_forward/: __init__.py  client_initializer.py
forager_forward/app_clients/: __init__.py  async_client.py  base.py  client.py  email_client.py
forager_forward/app_services/: __init__.py  email_validation_service.py
forager_forward/common/: common_utilities.py  exceptions.py  project_types.py  storage.py  validators.py
forager_service/: __init__.py  client_initializer.py  config.py  constants.py  hunter.py  services.py  utils.py  validators.py
forager_service/app_clients/: async_client.py  client.py
forager_service/app_services/: __init__.py  async_service.py  crud_service.py  email_validation_service.py  service.py  services.py  validators.py
forager_service/common/: common_utilities.py  storage.py  validators.py
forager_service/operation_handlers/: __init__.py  email_verify_record_handler.py
foreger_service/: __init__.py  config.py  exceptions.py  utils.py  validators.py
src/: __init__.py  config.py  constants.py  exceptions.py  utils.py  validators.py
tests/: __init__.py  conftest.py
tests/forager_service/: __init__.py  conftest.py  test_common_validators.py  test_config.py  test_services.py  test_utils.py  test_validators.py
tests/forager_service/app_clients/: __init__.py  test_async_client.py  test_async_service.py  test_service.py  test_sync_client.py
tests/forager_service/app_services/: __init__.py  test_async_service.py  test_service.py
tests/forager_service/common/: __init__.py  test_common_utilities.py  test_common_validators.py  test_validators.py
