[tool.poetry]
name = "forager_victor"
version = "0.1.0"
description = "Hunter.io v2 api implementation"
authors = ["victro-nuzhniy <nuzhniyva@gmail.com>"]
readme = "README.md"
packages = [{include = "forager_victor"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.26.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
xenon = "^0.9.1"
pre-commit = "^3.6.0"
wemake-python-styleguide = "^0.18.0"
flake8-docstrings = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  | dist
  | .pytest_cache
  | .tox
  | docs
  | docs_src
  | .venv
  | .mypy_cache
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = []
