[tool.poetry]
name = "forager_forward"
version = "0.1.1"
description = "Hunter.io v2 api implementation"
authors = ["victro-nuzhniy <nuzhniyva@gmail.com>"]
repository = "https://github.com/victor-nuzhniy/forager.git"
readme = "README.md"
packages = [{include = "forager_forward"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.26.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
xenon = "^0.9.1"
pre-commit = "^3.6.0"
wemake-python-styleguide = "^0.18.0"
flake8-docstrings = "^1.7.0"
mypy = "^1.8.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
pytest-sugar = "^0.9.7"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.15.0"
faker = "^22.0.0"
pytest-clarity = "1.0.0"
asgiref = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include_trailing_comma = true
include = '\.pyi?$'
extend-exclude = '''
/(
  | dist
  | .pytest_cache
  | .tox
  | docs
  | docs_src
  | .venv
  | .mypy_cache
)/
'''

[tool.pytest.ini_options]
# === Pytest ===
pythonpath = [".", "forager_service"]
norecursedirs = ["env", ".env", "migrations", "venv"]
testpaths = ["tests",]
console_output_style = "progress"
python_files = "test_*"
python_classes = "Test*"
python_functions = "test_*"
